--- a/app/static/css/worldtime.css
+++ b/app/static/css/worldtime.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f0f0f5;
+    background-color: #fffacd;
     color: #333;
     margin: 0;
     padding: 0;
