--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,6 +39,8 @@
         <a href="https://xyz.ziyuan77.com"> 元科技的脉搏 </a>
         <a href="/worldtime"> 世界时间 </a>
         <a href="/excel"> Excel公式生成器 </a>
+        <a href="/calculator"> 多功能计算器 </a>
+        <a href="/math"> 数学计算生成器 </a>
         <!--<a href="http://server.xhdndmm.cn:5244"> 资源站 </a>-->
         <!--<a href="https://xhdndmm.cn"> 我朋友的网站 </a>-->
         <script src="/static/js/index.js"></script>
