Refactor routes.py and add download functionality

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,6 +41,7 @@
         <a href="/excel"> Excel公式生成器 </a>
         <a href="/calculator"> 多功能计算器 </a>
         <a href="/math"> 数学计算生成器 </a>
+        <a href="/download/index"> 下载器 </a>
         <!--<a href="http://server.xhdndmm.cn:5244"> 资源站 </a>-->
         <!--<a href="https://xhdndmm.cn"> 我朋友的网站 </a>-->
         <script src="/static/js/index.js"></script>
