Refactor chat.html to comment out the image input field

--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -11,7 +11,7 @@
     <div id="chat">
         <div id="messages"></div>
         <input id="messageInput" type="text" placeholder="输入消息...">
-        <input id="imageInput" type="file" accept="image/*">
+        <!-- <input id="imageInput" type="file" accept="image/*"> -->
         <button id="sendButton">发送</button>
     </div>
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
