Refactor get_messages route to return messages in reverse order

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>注册</title>
+        <link rel="stylesheet" href="/static/css/register.css" />
     </head>
     <body>
         <h2>注册</h2>
