--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>登录</title>
+        <link rel="stylesheet" href="/static/css/login.css" />
     </head>
     <body>
         <h2>登录</h2>
