--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -3,20 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>实时聊天</title>
+    <title>聊天</title>
     <link rel="stylesheet" href="/static/css/chat.css">
 </head>
 <body>
-    <h1>实时聊天</h1>
-    <div id="chat">
-        <div id="messages">
-            <div id="messages-container">
-                <!-- 消息将在这里动态添加 -->
+    <!-- <h1>聊天</h1> -->
+    <div class="chat-container">
+        <div id="users-list">
+            <h3>好友列表</h3>
+            <div id="friends-container">
+                <!-- 好友将在这里动态添加 -->
             </div>
+            <input id="addFriendInput" type="text" placeholder="输入好友用户名...">
+            <button id="addFriendButton">添加好友</button>
         </div>
-        <div class="input-container">
-            <input id="messageInput" type="text" placeholder="输入消息...">
-            <button id="sendButton">发送</button>
+
+        <div id="chat">
+            <div id="messages">
+                <div id="messages-container">
+                    <!-- 消息将在这里动态添加 -->
+                </div>
+            </div>
+
+            <div class="input-container">
+                <input id="messageInput" type="text" placeholder="输入消息...">
+                <button id="sendButton">发送</button>
+            </div>
         </div>
     </div>
     <a href="/logout">登出</a>
