--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,8 @@
 <html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>ziyuan77的网站</title>
+        <meta name="description" content="资源77提供在线工具合集，包括密码生成器、世界时间、Excel工具、计算器、数学工具及免费下载资源，简化您的日常需求。">
+        <title>在线工具合集 - 密码生成器, 世界时间, Excel工具, 计算器, 数学工具, 下载资源</title>
         <link rel="stylesheet" href="/static/css/index.css" />
     </head>
     <body>
