--- a/app/templates/password.html
+++ b/app/templates/password.html
@@ -2,8 +2,8 @@
 <html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>安全密码生成器</title>
+        <meta name="description" content="使用在线密码生成器，快速生成安全随机密码，保护您的账户和隐私。支持自定义密码长度和复杂性。">
+        <title>在线密码生成器 - 安全随机密码快速生成</title>
         <link rel="stylesheet" href="/static/css/password.css" />
     </head>
     <body>
