--- a/app/templates/worldtime.html
+++ b/app/templates/worldtime.html
@@ -2,8 +2,8 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>世界时区时钟</title>
+    <meta name="description" content="快速查询世界各地的当前时间和时区信息，轻松安排跨国会议和旅行计划。">
+    <title>世界时间查询 - 精准在线时钟与时区对照</title>
     <link rel="stylesheet" href="/static/css/worldtime.css">
 </head>
 <body>
