--- a/app/templates/excel_if.html
+++ b/app/templates/excel_if.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
     <head>
         <meta charset="UTF-8" />
-        <title>多层 IF 公式生成器</title>
+        <title>在线多层 IF 公式生成器 - 多层 IF 公式快速生成</title>
         <script src="/static/js/excel.js"></script>
         <link rel="stylesheet" href="/static/css/excel.css" />
     </head>
