--- a/app/templates/download.html
+++ b/app/templates/download.html
@@ -52,6 +52,7 @@
 </head>
 <body>
     <h1>下载器</h1>
+    <a href="/tools"><img src="/static/images/back.png"  width="32" alt="logo" /></a>
     <div class="form-group">
         <input type="text" id="urlInput" placeholder="输入要下载的 URL">
     </div>
