--- a/app/templates/worldtime.html
+++ b/app/templates/worldtime.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>世界时区时钟</h1>
-    <a href="/"> 返回首页 </a>
+    <a href="/tools"><img src="/static/images/back.png" width="32" alt="logo" /></a>
     <div class="clock-container">
         <div class="clock">
             <h2>贝克岛时间 (UTC-12)</h2>
