--- a/app/templates/chat.html
+++ b/app/templates/chat.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <!-- <h1>聊天</h1> -->
+
+    <a href="/tools"><img src="/static/images/back.png" width="100" alt="logo" /></a>
     <div class="chat-container">
         <div id="users-list">
             <h3>好友列表</h3>
