--- a/app/templates/excel_if.html
+++ b/app/templates/excel_if.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>多层 IF 公式生成器</h1>
-        <a href="/"> 返回 </a>
+        <a href="/tools"><img src="/static/images/back.png"  width="32" alt="logo" /></a>
         <form onsubmit="event.preventDefault(); generateNestedIFFormula();">
             <div id="conditionsContainer">
                 <div class="conditionBlock">
