--- a/app/templates/password.html
+++ b/app/templates/password.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>安全密码生成器</h1>
-        <a href="/"> 返回首页 </a>
+        <a href="/tools"><img src="/static/images/back.png" alt="logo" /></a>
         <canvas id="clockCanvas" width="200" height="200"></canvas>
         <div id="currentTime"></div>
         <form id="passwordForm" method="post" action="/password">
