Add new routes for SSH commands and multiple ground backgrounds; create corresponding HTML templates and stylesheets. Update existing CSS for improved aesthetics and add home navigation links across templates.

--- a/app/templates/calculator.html
+++ b/app/templates/calculator.html
@@ -8,6 +8,7 @@
 <body>
     <h1>多功能计算器</h1>
     <a href="/tools"><img src="/static/images/back.png"  width="32" alt="logo" /></a>
+    <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
     <div class="calculator">
         <input type="text" id="display" class="display" disabled>
         <div>
