--- a/app/templates/daily.html
+++ b/app/templates/daily.html
@@ -12,7 +12,13 @@
             <p>这里是一些日常记录。</p>
             <ul>
                 <!-- 示例：<li>2024-12-20: 今天天气不错，心情很好。</li> -->
-                <li>2024-12-20: 成功在同学的怂恿下建立了自己的网站，虽然很简陋，但是还是很有成就感的。顺便说一句，这是同学的网站：<a href="https://xhdndmm.cn"> xhdndmm.cn </a></li>
+                <li>2024-12-20：前端页面太丑了，所以赶工改了一下</li>
+                <li>2024-12-10：才反应过来。我的域名不正适合建资源站吗？所以建了个资源站<a href="https://file.ziyuan77.com" target="_blank"> file.ziyuan77.com </a></li>
+                <li>2024-12-05：找了一台不用的电脑，搞了台自己的服务器</li>
+                <li>2024-11-29：开始自己建站</li>
+                <li>2024-11-24：给域名解析上了</li>
+                <li>2024-11-22：今天天气不错，心情很好。</li>
+                <li>2024-11-21: 成功在同学的怂恿下建立了自己的网站，虽然很简陋，但是还是很有成就感的。顺便说一句，这是同学的网站：<a href="https://xhdndmm.cn"> xhdndmm.cn </a></li>
             </ul>
         </div>
         <script src="/static/js/daily.js"></script>
