--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -11,7 +11,21 @@
             <h1>项目</h1>
             <p>这里是一些项目。</p>
             <ul>
+                <p>自建的资源站，提供各种资源，但速度较慢</p>
                 <a href="https://file.ziyuan77.com" target="_blank"> 资源站 </a>
+            </ul>
+            <ul>
+                <p>一个 SSH 的常用命令介绍</p>
+                <a href="/ssh_commands"> SSH 命令 </a>
+            </ul>
+            <ul>
+                <p>一些科技感背景</p>
+                <a href="/ground"> 科技感背景 </a>
+            </ul>
+            <ul>
+                <p>和别人搞的聊天室</p>
+                <a href="https://github.com/xhdndmm/chat.git" target="_blank"> github下载（最新） </a>
+                <a helf="https://file.ziyuan77.com/d/home/ziyuan77/chat-main.zip?sign=S-07vVD9QE-ch4hlfln-hIbq8ynLXrcmTnsLVQgUE6U=:0" target="_blank"> 资源站下载（不是最新但大陆地区稳定） </a>
             </ul>
         </div>
         <script src="/static/js/project.js"></script>
