--- a/app/static/css/excel.css
+++ b/app/static/css/excel.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #fffacd;
+    background-color: #f4f4f9
     color: #333;
     margin: 0;
     padding: 0;
