--- a/app/templates/excel_if.html
+++ b/app/templates/excel_if.html
@@ -9,6 +9,7 @@
     <body>
         <h1>多层 IF 公式生成器</h1>
         <a href="/tools"><img src="/static/images/back.png"  width="32" alt="logo" /></a>
+        <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
         <form onsubmit="event.preventDefault(); generateNestedIFFormula();">
             <div id="conditionsContainer">
                 <div class="conditionBlock">
