--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,7 @@
                     <li><a href="/projects">项目</a></li>
                     <li><a href="/daily">日常</a></li>
                     <li><a href="/tools">工具</a></li>
+                    <li><a href="https://file.ziyuan77.com" target="_blank">资源站</a></li>
                 </ul>
             </div>
             <div class="content">
