Add new routes and templates for text documentation, console commands, and web development tutorial; create corresponding HTML files and stylesheets. Update existing templates to enhance navigation and aesthetics, including image updates and additional links.

--- a/app/templates/ssh_commands.html
+++ b/app/templates/ssh_commands.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/css/ssh_commands.css">
 </head>
 <body>
-    <a href="/projects"><img src="/static/images/back.png" alt="logo" /></a>
+    <a href="/text"><img src="/static/images/back.png" alt="logo" /></a>
     <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
     <h1>常用SSH命令及其参数</h1>
     <div class="command-list">
