--- a/app/templates/ground1.html
+++ b/app/templates/ground1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>科技感背景1</h1>
-    <a href="/"><img src="/static/images/home.png" alt="logo" /></a>
+    <a href="/"><img src="/static/images/home_w.png" alt="logo" /></a>
     <a href="/ground"><img src="/static/images/back.png" alt="logo" /></a>
     <a href="https://file.ziyuan77.com/d/home/ziyuan77/ground1.js?sign=JcrW9qsz0Us7ovPsXRma_76-jvPnik9VN5-tDEy_4C0=:0" target="_blank">下载</a>
     <canvas id="ground1Canvas" width="100%" height="100%"></canvas>
