--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,7 @@
                     <li><a href="/daily">日常</a></li>
                     <li><a href="/tools">工具</a></li>
                     <li><a href="https://file.ziyuan77.com" target="_blank">资源站</a></li>
+                    <li><a href="https://blog.ziyuan77.com" target="_blank">博客</a></li>
                 </ul>
             </div>
             <div class="content">
