--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -15,8 +15,8 @@
                 <a href="https://file.ziyuan77.com" target="_blank"> 资源站 </a>
             </ul>
             <ul>
-                <p>一个 SSH 的常用命令介绍</p>
-                <a href="/ssh_commands"> SSH 命令 </a>
+                <p>一些自己写的文档</p>
+                <a href="/text"> 文档 </a>
             </ul>
             <ul>
                 <p>一些科技感背景</p>
