Add Windows 11 installation guide route, template, and styles. Create a new route for '/win11' in routes.py, add win11.html template with detailed installation instructions, and include win11.css for styling. Update text.html to link to the new guide.

--- a/app/templates/text.html
+++ b/app/templates/text.html
@@ -23,6 +23,10 @@
                 <p>一个建站教程</p>
                 <a href="/web"> 建站教程 </a>
             </ul>
+            <ul>
+                <p>Windows 11 安装教程</p>
+                <a href="/win11"> Windows 11 安装教程 </a>
+            </ul>
         </div>
     </body>
 </html>
