Refactor win11.html to comment out outdated ISO download links for Windows 11 installation. This change improves clarity and maintains the template's structure without removing the information entirely.

--- a/app/templates/win11.html
+++ b/app/templates/win11.html
@@ -90,10 +90,10 @@
             <p>在虚拟机中安装时，请确保分配足够的内存和处理器资源，以确保流畅的操作体验。</p>
             <p>这里提供一些下载路径，按速度合理选择</p>
             <p>获取 ISO 文件：<a href="https://www.microsoft.com/zh-cn/software-download/windows11" target="_blank">官方源</a></p>
-            <p>获取 ISO 文件：<a href="https://file.ziyuan77.com/d/home/文件/资源/系统/windows/Win11_24H2_Chinese_Simplified_x64.iso?sign=HC5Ct5WFe5s3xi1XxI_vouF9Dha2ZtSAbk2RxSC9xBo=:0" target="_blank">镜像源 1（24H2）</a></p>
-            <p>获取 ISO 文件：<a href="https://file.ziyuan77.com/d/home/文件/资源/系统/windows/Win11_23H2_Chinese_Simplified_x64v2.iso?sign=hBA4kEwNaCZj0l0dz79NVNVOGM7BnQhaLZOS7thw_wQ=:0" target="_blank">镜像源 1（23H2）</a></p>
-            <p>获取 ISO 文件：<a href="http://server.xhdndmm.cn:5244/d/公开/资源/系统/windows/Win11_23H2_Chinese_Simplified_x64v2.iso?sign=WLJS7FaImXpkklVmYGKduguFk3bTLKlSlm6NhtmBFdk=:0" target="_blank">镜像源 2（23H2）</a></p>
-            <p>获取 ISO 文件：<a href="http://server.xhdndmm.cn:5244/d/公开/资源/系统/windows/Win11_24H2_Chinese_Simplified_x64.iso?sign=P9j332zHgK_xTd6Xy11GI20ayxn8feBo2iNWZs1lKCk=:0" target="_blank">镜像源 2（24H2）</a></p>
+            {% comment %} <p>获取 ISO 文件：<a href="https://file.ziyuan77.com/d/home/文件/资源/系统/windows/Win11_24H2_Chinese_Simplified_x64.iso?sign=HC5Ct5WFe5s3xi1XxI_vouF9Dha2ZtSAbk2RxSC9xBo=:0" target="_blank">镜像源 1（24H2）</a></p> {% endcomment %}
+            {% comment %} <p>获取 ISO 文件：<a href="https://file.ziyuan77.com/d/home/文件/资源/系统/windows/Win11_23H2_Chinese_Simplified_x64v2.iso?sign=hBA4kEwNaCZj0l0dz79NVNVOGM7BnQhaLZOS7thw_wQ=:0" target="_blank">镜像源 1（23H2）</a></p> {% endcomment %}
+            {% comment %} <p>获取 ISO 文件：<a href="http://server.xhdndmm.cn:5244/d/公开/资源/系统/windows/Win11_23H2_Chinese_Simplified_x64v2.iso?sign=WLJS7FaImXpkklVmYGKduguFk3bTLKlSlm6NhtmBFdk=:0" target="_blank">镜像源 2（23H2）</a></p> {% endcomment %}
+            {% comment %} <p>获取 ISO 文件：<a href="http://server.xhdndmm.cn:5244/d/公开/资源/系统/windows/Win11_24H2_Chinese_Simplified_x64.iso?sign=P9j332zHgK_xTd6Xy11GI20ayxn8feBo2iNWZs1lKCk=:0" target="_blank">镜像源 2（24H2）</a></p> {% endcomment %}
         </section>
         <section id="network_installation">
             <h2>网络安装</h2>
